# richman_2023

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: Player.h  func.h  global.h  map.h  start.h  test.h  tool.h  update.h
src/: Player.c  func.c  map.c  start.c  test.c  tool.c  update.c
test/: 1.c  UnitTest.py  UnitTestExample.c  test.py
